# APIBookTweaks

./: .gitignore  .travis.yml  CMakeLists.txt  LOG.txt  README.md  Tweak_Explainations.md
02_Qualities/: CMakeLists.txt
02_Qualities/callback_instance/: CMakeLists.txt  main.cpp  modulea.cpp  modulea.h  moduleb.cpp  moduleb.h
02_Qualities/shared_pointer/: CMakeLists.txt  main.cpp  myobject.cpp  myobject.h
03_Patterns/: CMakeLists.txt
03_Patterns/adapter/: CMakeLists.txt  adapter.cpp  adapter.h  main.cpp  original.cpp
03_Patterns/factory_extensible/: CMakeLists.txt  main.cpp  renderer.h  rendererfactory.cpp  rendererfactory.h
03_Patterns/factory_simple/: CMakeLists.txt  main.cpp  renderer.h  rendererfactory.cpp  rendererfactory.h
03_Patterns/pimpl_good/: CMakeLists.txt  autotimer.cpp  autotimer.h  main.cpp
03_Patterns/singleton/: CMakeLists.txt  main.cpp  singleton.h
03_Patterns/virtDestructor/: CMakeLists.txt  irender.cpp  irender.h  main.cpp
tests/: CMakeLists.txt  Tests.md
tests/02_Qualities/: CMakeLists.txt
tests/02_Qualities/callback_instance/: CMakeLists.txt  callbackInstanceTest.cpp
tests/02_Qualities/shared_pointer/: CMakeLists.txt  main.cpp  sharedPointerTest.cpp
tests/03_Patterns/: CMakeLists.txt
tests/03_Patterns/adapter/: CMakeLists.txt  adapterTest.cpp
tests/03_Patterns/factory_extensible/: CMakeLists.txt  factoryExtensibleTest.cpp
tests/03_Patterns/factory_simple/: CMakeLists.txt  factorySimpleTest.cpp
tests/03_Patterns/pimpl_good/: CMakeLists.txt  pimplGoodTest.cpp
tests/03_Patterns/singleton/: CMakeLists.txt  approvedCapture.txt  singletonTest.cpp
tests/03_Patterns/virtDestructor/: CMakeLists.txt  virtDestructorTest.cpp
